--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 PORT =3000
+MONGO_URI ='mongodb+srv://dheerajsalvi293:QJ13vUkpo1SkBHj2@cluster0.1aiwu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+JWT_SECRET= DRFVTGBYNHNHBVCDRFVGHJMHBGFVTERTAFHY
